--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,89 +1,17 @@
 <main class='p-5'>
-  <div class='row g-5'>
-    <div class='col-12'>
-      <form action=''>
-        <div>
-          <label for='form-label'>Email address</label>
-          <input class='form-control' type='text' />
-          <div class='form-text text-danger'>Error. You need
-            to set correct email
-          </div>
-        </div>
-      </form>
-    </div>
+  <h1>Hello World!</h1>
 
-    <hr />
-    <div class='row py-5'>
-      <div class='col-3 pt-2'>
-        <label for='form-label'>Email address</label>
-      </div>
-      <div class='col-5'>
-        <input class='form-control' type='text' />
-      </div>
-      <div class='col-4 pt-2'>
-        <div class='form-text text-danger'>Error. You need
-          to set correct email
-        </div>
-      </div>
-    </div>
-  
-    <div class='col-12'>
-      <form action=''>
-        <div>
-          <label for='form-label'>Select role</label>
-          <select class='form-select' type='text' />
-            <option selected value="">Open list</option>
-            <option value="">Admin</option>
-            <option value="">User</option>
-          </select>
-          <div class='form-text text-danger'>Error. You need
-            to set correct email
-          </div>
-        </div>
-      </form>
-    </div>
+  <h2> h2</h2>
+  <h3> h3 </h3>
+  <h4 id='h4tag'> h4 </h4>
 
-    <hr>
-
-    <div class='col-6'>
-      <div class="form-check">
-        <label for="" class="form-check-label">Apple</label>
-        <input name="food" type="radio" class="form-check-input">
-      </div>
-      <div class="form-check">
-        <label for="" class="form-check-label">Orange</label>
-        <input name="food" type="radio" class="form-check-input">
-      </div>
-      <div class="form-check">
-        <label for="" class="form-check-label">Banana</label>
-        <input name="food" type="radio" class="form-check-input">
-      </div>
-    </div>
-
-        <hr>
-
-    <div class='col-6'>
-      <div class="form-check">
-        <label for="" class="form-check-label">Apple</label>
-        <input name="food" type="checkbox" class="form-check-input">
-      </div>
-      <div class="form-check">
-        <label for="" class="form-check-label">Orange</label>
-        <input name="food" type="checkbox" class="form-check-input">
-      </div>
-      <div class="form-check">
-        <label for="" class="form-check-label">Banana</label>
-        <input name="food" type="checkbox" class="form-check-input">
-      </div>
-    </div>
-
-        <hr>
-
-    <div class='col-6'>
-      <div class="form-check form-switch">
-        <label for="" class="form-check-label">Get bonus</label>
-        <input name="food" type="checkbox" class="form-check-input">
-      </div>
-    </div>
-
+  <div style=' color:blueviolet'> This is Div</div>
 </main>
+
+<style>
+  h2 { color: green; } h3 { color:blue; }
+</style>
+
+<script>
+  h4tag.style.color = 'red';
+</script>
