--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -3,14 +3,53 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
  }}
 
-<div class='p-5'>
-  <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
 
-  <button
-    type='button'
-    class='btn btn-primary'
-  >Купити</button>
+  
+  <div class="row">
+    <div class="col-6">
+      <div>
+        Oleksiy Verkhulevskyy
+      </div>
+    </div>
+    <div class="col-6">
+      <div>
+          Resume project
+      </div>
+    </div>
+    </div>
+  </div>
+
+
+<main>
+  
+  <h1>Page list</h1>
+  <p>This is a summary of a project that demonstrates my capabilities as a layout designer</p>
+
+<div class="row g-2">
+  <div class="col-4">
+    <div class="card">
+      <div class="card-header text-center">
+        Resume
+      </div>
+      <div class="card-body">
+        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
+        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
+        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
+        <div> <button type='button' class='btn btn-primary mb-2' href='#' > Button </button></div>
+        
+      </div>
+    </div>
+
+
+
+  </div>
+  <div class="col-4"></div>
+  <div class="col-4"></div>
 </div>
+  
+
+  
+</main>
 
 {{! 
     Цей код містить лише те, що буде виводитись в <body>
